--- a/public/css/homeStandard.css
+++ b/public/css/homeStandard.css
@@ -420,8 +420,14 @@
   }
 
   .card{
-    padding: 5.25rem!important;
-    height: 350px;
+    padding: 0px!important;
+    height: 500px;
     overflow: auto;
+    margin-bottom: 50px;
+    margin: 0px;
+    width: 350px!important;
+  }
+
+  .col{
     margin-bottom: 50px;
   }
